<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.andromeda.gpstracker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_margin="8dp"
            android:background="@drawable/card"
            android:elevation="4dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_information"
                    android:textColor="#212121"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/location_not_available"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/button_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_layout"
                    android:padding="8dp"
                    android:text="@string/open_maps"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:scaleType="centerCrop"
                android:src="@drawable/map" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_margin="8dp"
            android:background="@drawable/card"
            android:elevation="4dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:background="#EEEEEE"
                android:scaleType="centerCrop"
                android:src="@drawable/sms_1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_google_map_location"
                    android:textColor="#212121"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:text="@string/_880"
                    android:textColor="#404040" />

                <TextView
                    android:id="@+id/button_send"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_layout"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/send"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/or_you_can_use_volume_up_key_to_send_sms_to_default_number"
            android:textColor="#BDBDBD"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/fab_circle_kitkat"
        android:elevation="8dp"
        android:padding="16dp"
        android:src="@drawable/crosshairs_gps" />

</FrameLayout>
